<resources>
    <string name="app_name">FeedR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_label">My Info</string>
    <string name="feed_label">Feed Me</string>
    <string name="game_label">Play with Me</string>
    <string name="settings">Settings</string>
    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>en</item>
        <item>id</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pet_name">Pet Name</string>
    <string name="pet_name_value">John Smith</string>
    <string name="pet_type">Pet Type</string>
    <string name="pet_type_value">Cheetah</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_age_value">12 Year 1 Month</string>
    <string name="pet_location">Pet Location</string>
    <string name="pet_location_value">Bandung</string>
    <string name="pet_distance">Distance From You</string>
    <string name="pet_distance_value">21 KM</string>
    <string name="edit_pet_name_hint">Enter your pet name</string>
    <string name="edit_pet_type_hint">Enter Pet Type</string>
    <string name="edit_pet_age_year_hint">Year</string>
    <string name="edit_pet_age_month_hint">Month</string>
    <string name="edit_page_location_hint">Enter Pet Location</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="msg_token_fmt"></string>
    <string name="food_status_label">Food Status</string>
    <string name="food_status">Full</string>
    <string name="last_fed_label">Last Fed</string>
    <string name="last_fed">12 February 2019 15:10:34</string>
    <string name="recommendation">Hehedjhaskdjsaldsjdskadjskdsjadksadjsakdjsdklsdkjsjdkskdskdjsadjasdadjsdksdjskdsjkdksdjsdjasdjsadksjdslkdsjdskdsdlsdjsdjs</string>
    <string name="feed_button">Feed Me!</string>
    <string name="shake_text">Shake Your Phone</string>
    <string name="newtext">2020 hehe hehe</string>
    <string name="your_high_score">Your High Score</string>
    <string name="default_highscore">0</string>
    <string name="play_now">Play Now!</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="save_button">Save</string>
    <string name="full_rec">Your pet hasn\'t eaten their food because the bowl is still full. Don\'t worry, they will eat the food when they are hungry</string>
    <string name="empty_rec">The food bowl is empty! You should fill your pet\'s food bowl so they can eat again. Just shake your phone or simply click the button below!</string>
</resources>
