<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/petNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_name_value"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"></View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/petTypeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_type_value"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"></View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_age"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/petAgeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_age_value"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"></View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/petLocationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_location_value"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"></View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_distance"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/petDistanceView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_distance_value"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>