<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feed"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/food_status_label"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/food_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food_status"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/last_fed_label"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/last_fed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/last_fed" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/recommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/empty_rec"
                android:textSize="24sp"
                android:textAlignment="center"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/feed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_button"
            android:onClick="feedMe"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="3.5"
                android:background="@android:color/darker_gray" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textAlignment="center"
                android:layout_weight="4"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_weight="3.5"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shake_text"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</LinearLayout>
